--- a/.github/workflows/Obfuscate.yml
+++ b/.github/workflows/Obfuscate.yml
@@ -1,118 +1,71 @@
-name: Build Obfuscate BPB Panel
+name: Obfuscate
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   schedule:
-    - cron: "0 1 * * *"
-
-permissions:
-  contents: write
+    - cron: '0 17 * * *'  # 每天UTC 17:00 (北京时间凌晨1点)
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Check out the code
-        uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "18"
-          cache: 'npm'
-
-      - name: Install obfuscator globally
-        run: |
-          npm install -g javascript-obfuscator
-
-      - name: Clone and build BPB source
-        run: |
-          # 克隆源仓库
-          git clone https://github.com/bia-pain-bache/BPB-Worker-Panel.git bpb-source
-          cd bpb-source
-          
-          # 安装依赖
-          echo "正在安装依赖..."
-          npm install
-          
-          # 构建项目
-          echo "正在构建项目..."
-          npm run build
-          
-          # 查找构建生成的JS文件
-          echo "查找构建文件..."
-          find . -name "*.js" -type f | grep -v node_modules | head -10
-          
-          # 检查常见的输出目录
-          echo "检查构建输出目录..."
-          ls -la build/ 2>/dev/null || echo "build目录不存在"
-          ls -la dist/ 2>/dev/null || echo "dist目录不存在"
-          ls -la lib/ 2>/dev/null || echo "lib目录不存在"
-          
-          # 复制主要的JS文件（根据实际情况调整）
-          if [ -f "./build/worker.js" ]; then
-            cp ./build/worker.js ../origin.js
-            echo "使用 build/worker.js"
-          elif [ -f "./dist/worker.js" ]; then
-            cp ./dist/worker.js ../origin.js
-            echo "使用 dist/worker.js"
-          elif [ -f "./dist/index.js" ]; then
-            cp ./dist/index.js ../origin.js
-            echo "使用 dist/index.js"
-          elif [ -f "./lib/index.js" ]; then
-            cp ./lib/index.js ../origin.js
-            echo "使用 lib/index.js"
-          else
-            # 如果标准目录没有，查找第一个主要的JS文件
-            echo "尝试查找主要JS文件..."
-            MAIN_JS=$(find . -name "*.js" -type f | grep -v node_modules | grep -v test | head -1)
-            if [ -n "$MAIN_JS" ]; then
-              cp "$MAIN_JS" ../origin.js
-              echo "使用: $MAIN_JS"
-            else
-              echo "错误：找不到JavaScript文件"
-              ls -la
-              exit 1
-            fi
-          fi
-
-      - name: Check if origin.js exists
-        run: |
-          if [ -f "origin.js" ]; then
-            echo "✅ origin.js 文件已找到，文件大小: $(wc -l < origin.js) 行"
-            head -5 origin.js
-          else
-            echo "❌ origin.js 文件不存在"
-            exit 1
-          fi
-
-      - name: Obfuscate BPB worker js
-        run: |
-          javascript-obfuscator origin.js --output _worker.js \
-            --compact true \
-            --control-flow-flattening true \
-            --control-flow-flattening-threshold 0.75 \
-            --dead-code-injection true \
-            --dead-code-injection-threshold 0.4 \
-            --identifier-names-generator hexadecimal \
-            --rename-globals true \
-            --string-array true \
-            --string-array-encoding 'rc4' \
-            --string-array-threshold 0.75 \
-            --transform-object-keys true \
-            --unicode-escape-sequence true
-
-      - name: List generated files
-        run: |
-          ls -la
-          echo "生成的 _worker.js 文件大小: $(wc -c < _worker.js) 字节"
-
-      - name: Commit changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          branch: main
-          commit_message: ':arrow_up: update latest bpb panel'
-          commit_author: 'github-actions[bot] <github-actions[bot]@users.noreply.github.com>'
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        
+    - name: Download build script
+      run: wget -O build.js https://raw.githubusercontent.com/bia-pain-bache/BPB-Worker-Panel/refs/heads/main/scripts/build.js
+      
+    - name: Install build dependencies
+      run: |
+        npm init -y
+        npm install jszip
+      
+    - name: Run build script to generate worker files
+      run: node build.js
+      
+    - name: Copy generated worker.js to root as origin.js
+      run: cp dist/worker.js origin.js
+      
+    - name: Install obfuscation dependencies
+      run: |
+        npm install javascript-obfuscator -g
+        npm install javascript-obfuscator
+        
+    - name: Obfuscate the code
+      run: |
+        javascript-obfuscator dist/worker.js --output dist/worker-obfuscated.js --compact true --control-flow-flattening true --control-flow-flattening-threshold 0.75 --dead-code-injection true --dead-code-injection-threshold 0.4 --debug-protection true --debug-protection-interval true --disable-console-output true --identifier-names-generator hexadecimal --log false --numbers-to-expressions true --rename-globals true --rotate-string-array true --self-defending true --shuffle-string-array true --split-strings true --split-strings-chunk-length 10 --string-array true --string-array-encoding rc4 --string-array-threshold 0.75 --string-array-wrappers-count 2 --string-array-wrappers-chained-calls true --string-array-wrappers-parameters-max-count 2 --string-array-wrappers-type function --transform-object-keys true --unicode-escape-sequence true
+        
+    - name: Create obfuscated zip
+      run: |
+        npm install jszip
+        node -e "
+        const JSZip = require('jszip');
+        const fs = require('fs');
+        const obfuscatedCode = fs.readFileSync('./dist/worker-obfuscated.js', 'utf8');
+        const zip = new JSZip();
+        zip.file('_worker.js', obfuscatedCode);
+        zip.generateAsync({
+            type: 'nodebuffer',
+            compression: 'DEFLATE'
+        }).then(nodebuffer => fs.writeFileSync('./dist/worker-obfuscated.zip', nodebuffer));
+        "
+      
+    - name: List generated files
+      run: ls -la dist/
+      
+    - name: Upload obfuscated files
+      uses: actions/upload-artifact@v4
+      with:
+        name: obfuscated-build
+        path: |
+          origin.js
+          dist/worker-obfuscated.js
+          dist/worker-obfuscated.zip
+        retention-days: 1
