--- a/.github/workflows/Obfuscate.yml
+++ b/.github/workflows/Obfuscate.yml
@@ -30,14 +30,24 @@ jobs:
           javascript-obfuscator build/unobfuscated-worker.js --output _worker.js \
           --compact true \
           --control-flow-flattening true \
-          --control-flow-flattening-threshold 1 \
+          --control-flow-flattening-threshold 0.8 \
           --dead-code-injection true \
-          --dead-code-injection-threshold 1 \
+          --dead-code-injection-threshold 0.4 \
+          --debug-protection true \
+          --debug-protection-interval 1000 \
+          --disable-console-output true \
           --identifier-names-generator hexadecimal \
+          --log false \
+          --numbers-to-expressions true \
           --rename-globals true \
+          --rotate-string-array true \
+          --self-defending true \
+          --shuffle-string-array true \
+          --split-strings true \
+          --split-strings-chunk-length 10 \
           --string-array true \
           --string-array-encoding 'rc4' \
-          --string-array-threshold 1 \
+          --string-array-threshold 0.75 \
           --transform-object-keys true \
           --unicode-escape-sequence true
 
