--- a/.github/workflows/Obfuscate.yml
+++ b/.github/workflows/Obfuscate.yml
@@ -40,12 +40,14 @@ jobs:
           --log false \
           --numbers-to-expressions true \
           --rename-globals true \
+          --rotate-string-array true \
           --self-defending true \
           --shuffle-string-array true \
           --split-strings true \
           --split-strings-chunk-length 10 \
           --string-array true \
           --string-array-encoding 'rc4' \
+          --string-array-indexes-type hexadecimal \
           --string-array-threshold 0.75 \
           --transform-object-keys true \
           --unicode-escape-sequence true
